@@ -1,2 +1,2 @@
-CLASSPATH=jre.jar
+CLASSPATH=javaforce.jar;jre.jar
 MAINCLASS=jre
