@@ -5,7 +5,7 @@
   <property name="home" location="../.."/>
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
-  <property name="version" value="1.15"/>
+  <property name="version" value="1.16"/>
   <property name="jre" location="${home}/jre_base_desktop"/>
 
   <import file="../../base.xml"/>
