@@ -1,7 +1,7 @@
 JavaForce SDK
 =============
 
-Version 17.1.0
+Version 17.2.0
 
 What is it?
 ===========
@@ -92,4 +92,4 @@ Web : pquiring.github.io/javaforce
 
 Git : github.com/pquiring/javaforce
 
-Released : Sept 21, 2018
+Released : Sept 26, 2018
